k8s/service-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: service-for-ingress
spec:
  selector:
    app.kubernetes.io/name: test-app-flask
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
