k8s/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: test-app-flask
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
