k8s/deploy-app-flask-aws.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  name: deploy-app-flask
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-flask
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-flask
    spec:
      containers:
      - image: docker.io/gautierbdev/test-app-flask:latest
        imagePullPolicy: Always
        name: app-flask
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: service-app-flask
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-flask
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test
  name: ingress-app-flask
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-app-flask
              port:
                number: 80
